<resources>
    <string name="app_name">TestApp</string>
    <string name="st">ST</string>
    <string name="dx">DX</string>
    <string name="iq">IQ</string>
    <string name="ht">HT</string>
    <string name="hp">HP</string>
    <string name="move">Move</string>
    <string name="speed">Speed</string>
    <string name="will">Will</string>
    <string name="per">Per</string>
    <string name="fp">FP</string>
    <string name="id">ID</string>
    <string name="skills">Skills</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="player_name">Player name</string>
    <string name="world">World</string>
    <string name="state">State</string>
    <string name="eyes">Eyes</string>
    <string name="hairs">Hairs</string>
    <string name="skin">Skin</string>
    <string name="race">Race</string>
    <string name="gender">Gender</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="main_hand">Main hand</string>
    <string name="tl">TL</string>
    <string name="sm">SM</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="go">goto</string>
    <string name="add_from_file">Add from file</string>
    <string name="create_new">Create new</string>
    <string name="add_new_character">Add new character</string>
    <string name="add_new_character_message">Choice how you want to add new character</string>
    <string name="settings">Settings</string>
    <string name="battle_manager">Battle Manager</string>
    <string name="all_skills">All Skills</string>
    <string name="home">Home</string>
    <string name="classic">Classic</string>
    <string name="bright">Bright</string>
    <string name="night">Night</string>
    <string name="export_character">Ex-rt</string>
    <string name="specialization">Specialization</string>
    <string name="difficulty">Difficulty</string>
    <string name="skill_points">Skill Points</string>
    <string name="skill_parry">Skill Parry</string>
    <string name="categories">Categories</string>
    <string name="defaults">Defaults</string>
    <string name="prereq_list">Prereq List</string>
    <string name="search">Search</string>
    <string name="total_points">Total Points</string>
    <string name="earn_points">Earn Points</string>
    <string name="skip">Skip</string>
    <string name="attack">Attack</string>
    <string name="def">Def</string>
    <string name="defence">Defence</string>
    <string name="action">Action</string>
    <string name="gt">&gt;</string>
    <string name="lt">&lt;</string>
    <string name="attack_type">Attack Type</string>
    <string name="range">Range</string>
    <string name="melee">Melee</string>
    <string name="choice_attack_type">Choice attack type</string>
    <string name="modificator">Modificator</string>
    <string name="target">Target</string>
    <string name="freehand">Freehand</string>
    <string name="skill_value">Skill value</string>
    <string name="weapon">Weapon</string>
    <string name="roll">Roll</string>
    <string name="dmg">Dmg</string>
    <string name="reach">Reach</string>
    <string name="assessment">Assessment</string>
    <string name="attacker_pose">Attacker pose</string>
    <string name="common_attack">Common Attack</string>
    <string name="enemy_defence_penalty">Enemy defence penalty</string>
    <string name="shield_db">Shield DB</string>
    <string name="block">Block</string>
    <string name="parry">Parry</string>
    <string name="dodge">Dodge</string>
    <string name="shield">Shield</string>
    <string name="position">Position</string>
    <string name="defending_pose">Defending pose</string>
    <string name="_attack_at_this_round">attack at this round</string>
    <string name="all_advantage">All Advantage</string>
    <string name="advantages">Advantages</string>
    <string name="type">Type</string>
    <string name="point_cost">Point cost</string>
    <string name="self_control">Self Control</string>
    <string name="reference">Reference</string>
    <string name="level">Level</string>
    <string name="points_per_level">Points per level</string>
    <string name="modifiers">Modifiers</string>
    <string name="skills_bonuses">Skills bonuses</string>
    <string name="attributes_bonuses">Attributes bonuses</string>
    <string name="advantage_prereq">Advantage prereq</string>
    <string name="acc">Acc</string>
    <string name="rcl">Rcl</string>
    <string name="bulk">Bulk</string>
    <string name="rof">ROF</string>
    <string name="meters">meters</string>
    <string name="target_speed">Target speed</string>
    <string name="shoots_count">Shoots count</string>
    <string name="aiming">Aiming</string>
    <string name="with">with</string>
    <string name="target_position">Target position</string>
    <string name="target_size">Target size</string>
    <string name="peoples">peoples</string>
    <string name="visibility">Visibility</string>
    <string name="venchie_drive_skill_fail_count">Venchie drive skill fail count</string>
    <string name="distance">Distance</string>
    <string name="on_largest_side">on largest side</string>
    <string name="target_sm">target SM</string>
    <string name="on">on</string>
    <string name="test_ground">Test Ground</string>

</resources>
