<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:id="@+id/startFragment"
            android:title="@string/home"/>

        <item android:id="@+id/skillObserveAllFragment"
            android:title="@string/all_skills"
            />

        <item android:id="@+id/advantageObserveAllFragment"
            android:title="@string/all_advantage"
            />
        <item android:id="@+id/battleFragment"
            android:title="@string/battle_manager"
            />
        <item android:id="@+id/settingsFragment"
            android:title="@string/settings"
            />
    </group>
</menu>